engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
.ide-editor {

    position: relative;
    height: 100%;
    width: 100%;

    .ide-header, .ide-content {
        position: absolute;
        left: 0;
        width: 100%;
    }
    
    .SplitPane:not(.remove-default)>.Pane2{
        overflow: hidden;
        display: flex;
        background: #fff;
        border-top: 1px solid #ddd;
    }
    .SplitPane.border{
        .Pane2{
            border-left: 1px solid #e9e9e9;
        }
    }

    .ide-header {
        top: 0;
    }

    .ide-content {
        // height: 100%;
        // padding-bottom: 50px;
        top: 36px;
        bottom: 0;

            .editor-view{
                padding-right: 220px;
                height: 100%;
            }
            .extra-view{
               overflow: auto;
            }
    }

    .ide-toolbar {
        width: 100%;
        height: 35px;
        padding: 4px 0;

        .ant-btn {
            position: relative;
            padding-left: 20px;
            line-height: 28px;
            border: 0;
        }
        .ant-btn[disabled],
        .ant-btn[disabled]:hover,
        .ant-btn[disabled]:focus,
        .ant-btn[disabled].active {
            background: transparent;
        }
    }

    .ide-console {
        width: 100%;
        margin-top: 2px;
        position: relative;
        z-index: 999;
        .ant-tabs {
            position: absolute;
            width: 100%;
            height: 100%;
        }
        .ant-tabs-bar .ant-tabs-tab-active {
            background: #fff;
            &:after{
                content:"";
                position: absolute;
                top:-1px;
                left:0px;
                right: 0px;
                height: 3px;
                opacity: 0.8;
                background: #2491F7;
            }
        }

        .ant-tabs.ant-tabs-card > .ant-tabs-bar .ant-tabs-tab {
            margin-right: -1px;
            border-bottom: 1px solid #dddddd;
        }

        .ant-tabs-nav div:nth-child(2) {
            border-left: 0;
            .anticon-close {
                display: none;
            }
        }

        .ant-tabs-bar {
            padding-right: 65px;
            margin-bottom: 0;
            border-bottom: 1px solid #d9d9d9;
            background: #ffffff;
        }

        .close-console {
            position: absolute;
            right: 10px;
            top: 8px;
            cursor: pointer;
        }

        .console-icon{
            position: absolute;
            top: 8px;
            cursor: pointer;
            &.up{
                right:47px;
            }
            &.down{
                right: 30px;;
            }
        }

        .ant-tabs-content {
            position: absolute;
            top: 32px;
            bottom: 0px;
            height: auto;
            overflow: auto;
        }

        .CodeMirror {
            background: #f7f7f7;
            font-size: 12px;
            color: #a2a1a1;

            .CodeMirror-lines {
                font-family: "Helvetica Neue For Number", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
            }
        }

        .console-table {

            .ant-table-placeholder {
                padding: 8px 4px;
            }

            .ant-pagination {
                margin-right: 20px;
            }

            table {
                border-left: 0;
                border-top: 0;
                padding-left: 2px;
                margin-top: -2px;
                border-right: 0;
                font-size: 12px;
                
                .ant-table-thead>tr>th {
                    padding: 8px 4px;
                    font-size: 12px;
                    font-weight: 500;
                }
                
                .ant-table-tbody>tr>td {
                    padding: 0;
                    background: #fff;
                }

                .ant-table-tbody>tr>td, .ant-table-thead>tr>th {
                    min-width: 100px;
                    &:nth-last-child(-n+1) {
                        border-right: 0;
                    }

                    textarea {
                        border: none;
                        width: 100%;
                        text-indent: 5px;
                        background: inherit;
                        resize: none;
                    }

                    textarea::-webkit-scrollbar { 
                        display: none; 
                    }
                }
            }
        }
    }
}
.CodeMirror pre.CodeMirror-placeholder { color: rgba(159, 168, 210, 0.48); }
.c-ide-result__table{
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 40px;
    overflow: hidden;
}
.c-ide-result__tools{
    position: absolute;
    bottom: 0px;
    height: 40px;
    width: 100%;
    padding-top: 5px;
    padding-left: 8px;
}
.c-ide-result__tools__pagination{
    float: right;
    padding-right: 18px;
}
.o-handsontable-no-border{
    .handsontable{
        thead tr:first-child th{
            border-top: 0px;
        }
        th:first-child{
            border-left: 0px;
        }
    }
}

